service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-demo
spec:
  selector:
    app: nginx-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
